--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "dotenv": "^10.0.0",
     "ethers": "^5.3.1",
     "framer-motion": "^4",
     "ol": "^6.6.1",
+    "random-js": "^2.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
